fix scroll to top on route change issue on iOS

--- a/src/assets/stylesheets/show.scss
+++ b/src/assets/stylesheets/show.scss
@@ -4,9 +4,9 @@
 
 .topic-content {
   word-wrap: break-word;
-  line-height: 24px;
-  font-size: 15px;
-  color: #404040;
+  line-height: 29px;
+  font-size: 18px;
+  color: #5d5c5c;
 
   a {
     color: #5e5e5e;
